# asr-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  ROADMAP.md  agent.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.cmd
config/: models.example.yaml
docs/: 00_technical_assignment.md  01_architecture.md  02_api_contracts.md  03_model_profiles.md  04_streaming_and_stabilization.md  05_client_integration.md  06_security_privacy.md  07_deployment.md  08_benchmarking.md  09_implementation_plan.md  10_usage_and_models.md  11_docker_gpu_deployment.md
docs/source_conversations/: chatgpt_share_69f5014c_bfd4_8386_b892_8c7d889e5136_full.md
examples/: client_http_file.py  client_ws_stream.py
scripts/: benchmark_models.py  check_cuda_driver.py  check_docker_gpu.cmd  check_gpu_compute_types.py  debug_model_load.py  download_models.py  run_docker_gpu.cmd  run_local_console.cmd
src/local_asr_service/: app.py  config.py  main.py  schemas.py  security.py  streaming.py
src/local_asr_service/backends/: base.py  factory.py  faster_whisper_backend.py  mock.py
src/local_asr_service/static/: index.html
tests/: test_app.py  test_live_streaming.py  test_schemas.py
